--- a/dev/style/sections/_product.scss
+++ b/dev/style/sections/_product.scss
@@ -188,10 +188,6 @@
   margin-top: $spacing-2;
 }
 
-.pdp__add-to-cart {
-  margin-bottom: $spacing-2;
-}
-
 .pdp__add-to-cart:disabled {
   opacity: 0.5;
   cursor: not-allowed;
